--- a/templates/phpmps/index.htm
+++ b/templates/phpmps/index.htm
@@ -5,221 +5,136 @@
 <title>{$seo['title']}</title>
 <meta name="Keywords" content="{$seo['keywords']}">
 <meta name="Description" content="{$seo['description']}">
-<link href="templates/{$CFG[tplname]}/style/index.css" type="text/css" rel="stylesheet" />
+<link href="templates/{$CFG[tplname]}/style/reset.css" type="text/css" rel="stylesheet" />
+<link href="templates/{$CFG[tplname]}/style/style.css" type="text/css" rel="stylesheet" />
+<link href="templates/{$CFG[tplname]}/style/category.css" type="text/css" rel="stylesheet" />
 <script src="js/common.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 </head>
 <body class="home-page">
 <div class="wrapper">
-<!--{template header}-->
+	<!--{template header}-->
 	<!-- 主体 -->
 	<div id="content">
-		<!-- 第一屏 -->
-		<div class="grid_c1 clearfix">
-			<div class="col_main">
-				<div class="clearfix">
-					<div class="left">
-						
-						<!-- 分类列表 -->
-						<div class="category_list">
-							<span class="bk_tp"></span>
-							<div class="bd">
-								<div class="weather_changeColor">
-									<!-- 列表 -->
-									<div class="category_bd">
-										{loop $cats_list $cat}
-										<h3><a href="{$cat['caturl']}">{$cat['catname']}</a></h3>
-										<ul class="clearfix">
-										{loop $cat[children] $child}
-										<li><a href="{$child['url']}" >{$child['name']}({$info_count[$child[id]]})</a></li>
-										{/loop}
-										</ul>
-										{/loop}
-									</div>
-								</div>
-							</div>
-							<span class="bk_ft"></span>
-						</div>
-					</div>
-					<div class="right">
-						<!-- 切换banner -->
-						<div class="container" id="idTransformView">
-							<script type=text/javascript>
-							<!--
-								var focus_width=350
-								var focus_height=170
-								var text_height=0
-								var swf_height = focus_height+text_height
-								
-								var pics='<?=$flash['image']?>'
-								var links='<?=$flash['url']?>'
-								var texts='||||'	
-								document.write('<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" width="'+ focus_width +'" height="'+ swf_height +'">');
-								document.write('<param name="allowScriptAccess" value="sameDomain"><param name="movie" value="images/flashplay.swf"><param name="quality" value="high"><param name="bgcolor" value="#ffffff">');
-								document.write('<param name="menu" value="false"><param name="wmode" value="opaque">');
-								document.write('<param name="FlashVars" value="pics='+pics+'&links='+links+'&texts='+texts+'&borderwidth='+focus_width+'&borderheight='+focus_height+'&textheight='+text_height+'">');
-								document.write('<embed src="images/flashplay.swf" wmode="opaque" FlashVars="pics='+pics+'&links='+links+'&texts='+texts+'&borderwidth='+focus_width+'&borderheight='+focus_height+'&textheight='+text_height+'" menu="false" bgcolor="#ffffff" quality="high" width="'+ focus_width +'" height="'+ focus_height +'" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />');		
-								document.write('</object>');
-							//-->
-							</script>
-						</div>
-						<!-- 推荐信息 -->
-						<div class="news_module">
-							<div class="hd"><span class="tit info">推荐信息</span></div>
-							<div class="bd">
-								<ul>
-									{loop $pro_info $val}
-									<li><a href="{$val['url']}"  target=_blank>{$val['title']}</a><span>{$val['catname']}</span> -<span>{$val['areaname']}</span></li>
-									{/loop}
-								</ul>
-							</div>
-							<div class="ft">
-							</div>
-						</div>
-						<!-- 最新新闻 -->
-						<div class="news_module">
-							<div class="hd"><span class="tit news">最新信息</span></div>
-							<div class="bd bd_c">
-								<ul>
-									{loop $new_info $val}
-									<li><a href="{$val['url']}" target=_blank>{$val['title']}</a><span>{$val['catname']}</span> -<span>{$val['areaname']}</span></li>
-									{/loop}
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- 图片信息开始 -->
-				<div class="tupxx">
-					<div class="tupxxbt1"><span class="tupxxbt">图片信息</span></div>
-					<div class="tupxxnr clearfix">
-						<ul>
-							{loop $thumb_info $thumb}
-							<li><a href="{$thumb[url]}" title="{$thumb[title]}" target=_blank><b><img src="{$thumb[thumb]}" alt="{$thumb[title]}" /></b>
-							<span class="title">{$thumb[title]}</span></a><span class="price">{$thumb[postdate]}</span></li>
-							{/loop}
-						</ul>
-					</div>
-				</div>
-				<!--*图片信息结束*-->
-				<!-- 企业信息开始 -->
-				<div class="tupxx">
-				<div class="tupxxbt1"><span class="tupxxbt">企业展示</span></div>
-				<div class="tupxxnr clearfix">
-					<ul>
-						{loop $coms $val}
-						<li><a href="{$val[url]}" title="{$val[comname]}" target=_blank><b><img src="{$val[thumb]}" alt="{$val[comname]}" /></b>
-						<span class="title">{$val[sname]}</span></a><span class="price">{$val[postdate]}</span></li>
-						{/loop}
-					</ul>
-				</div>
-				</div>
-				<!--*图片信息结束*-->
-			</div>
-			<div class="col_sub">
-				<!--今日资讯-->
-				<div class="site_notice">
-					<div class="hd"><div class="tit">最新资讯</div></div>
-					<div class="bd">
-					    <ul>
-						{loop $articles $val}
-						<li><a href="{$val[url]}" target="_blank" title="{$val[title]}">&nbsp;{$val[ctitle]}</a></li>
-						{/loop}
-						</ul>
-					</div>
-					<div class="ft"><a href="article.php" class="more">更多</a></div>
-				</div>
-				<!--热门信息-->
-				<div class="site_hot">
-					<div class="hd"><div class="tits">热门信息</div></div>
-					<div class="bd">
-						<ul>
-						{loop $hot_info $val}
-						<li>[{$val[postdate]}] <a href="{$val['url']}" title="{$val['title']}" target=_blank>{$val['title']}</a></li>
-						{/loop}
-						</ul>
-					</div>
-				</div>
-				<!-- 评论开始 -->
-				<div class="seller_rank">
-					<div class="hd"><span class="tit">评论</span></div>
-					<div class="bd">
-					{loop $comments $comment}
-					<div class="pingl">
-						<div class="pinglnr">{$comment[content]}</div>
-						<div class="pinglbt"><b>{$comment[username]}</b>&nbsp;对&nbsp;<a href="{$comment[url]}" target="_blank" class="pinglbt2">{$comment[title]}</a>&nbsp;的评论</div>
-					</div>
+	{template here}
+	<div class="page_cont clearfix">
+	<div class="col_sub">
+		<!-- 类别列表 -->
+		<!-- 详细搜索 -->
+		<div class="searchz_box">
+			<div class="hd">详细搜索</div>
+			<div class="bd">
+			<form action="search.php" method="post" name="search" >
+				<ul>
+					<li>分类：{$s_cat}</li>
+					<li>地区：{$s_area}</li>
+					{loop $cat_custom $item}
+					<li>{$item[cusname]}：{$item[html]} {$item[unit]}</li>
 					{/loop}
-					</div>
-					<div class="ft"></div>
-				</div>
-				<!-- 评论结束 -->
-				<!-- 新手+客服 -->
-				<div class="tiro_service">
-					<div class="tiro_zone">
-						<div class="hd"><span class="tit">新手上路</span></div>
-						<div class="bd">
-							<ul>
-								{loop $helps $help}
-								<li><a href="{$help[url]}" target="_blank">{$help[title]}</a></li>
-								{/loop}
-							</ul>
-						</div>
-						<div class="ft"><a href="help.php?act=list" class="more">更多 </a></div>
-					</div>
-					<div class="service_zone">
-						<div class="hd"><span class="tit">客服中心</span></div>
-						<div class="bd">
-							<ul>
-								<li class="ser_tel">热线电话：{$CFG['phone']}</li>
-								<li class="ser_qq">QQ：<!--{loop $CFG['qq'] $qq}--><a href="http://wpa.qq.com/msgrd?V=1&amp;Uin={$qq}&amp;Site={$CFG[webname]}&amp;Menu=yes" target="_blank"><img style="display:inline" src="http://wpa.qq.com/pa?p=1:{$qq}:4" height="16" border="0" alt="QQ" />{$qq}</a>
-								<!--{/loop}--></li>
-								<li class="ser_qqs">QQ群：{$CFG['qqun']}</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- 新手+客服 -->
+					<li>关键字：<input type="text" name="keywords" /></li>
+					<li style="text-align:center;">
+					<input type="submit" name="Submit" value=" 搜 索 " />
+					<input type="hidden" name="default_cat" value="{$catid}" />
+					<input type="hidden" name="default_area" value="{$areaid}" />
+					</li>
+				</ul>
+			</form>
 			</div>
 		</div>
-		<!-- 第二屏 -->
-		<div style=" margin-top:5px;"></div>
-		<div class="grid_c2">
-			<!-- 便民电话 -->
-			<div class="live_box clearfix">
-				<h2><a href="bianmin.php">便民电话</a></h2>
-				<div class="p_right">
-				<ul class="fb">
-				{loop $fac $fac} <li>{$fac['title']}: {$fac['phone']}</li> {/loop}
+		<!-- 热门信息 -->
+		<div class="searchz_box">
+			<div class="hd">热门信息</div>
+			<div class="bd tiexin" style="padding:8px;">
+				<ul>
+					<!--{loop $cat_hot $hot}-->
+						<li><a href="{$hot['url']}" target="_blank">{$hot['title']}</a></li>
+					<!--{/loop}-->
 				</ul>
-				</div>
 			</div>
-			<!-- 便民电话结束 -->
-			<!-- 友情链接 -->
-			<div class="friend_link">
-				<div class="hd">友情链接</div>
-				<div class="bd">
-					<ul class="pic clearfix">
-					{if !empty($links[image])}
-						{loop $links[image] $link}
-						<li><a href="{$link['url']}" target=_blank ><img src="{$link['logo']}" alt="{$link['web_name']}" width="88" height="31" border="0" title="{$link['webname']}"></a></li>
-						{/loop}
+		</div>
+	</div>
+	<div class="col_main bg_close" id="node_box">
+		<div class="mainBar">
+			<!-- 头部选择 --> 
+			<div class="top_selsct">
+			{if $cat_arr || $area_arr}
+				<ul class="clearfix">
+					{if $cat_arr}
+					<div class="address">分类查找：
+						<!--{loop $cat_arr $val}-->
+						<a href={$val[url]}> {$val[catname]}</a>&nbsp;
+						<!--{/loop}-->
+					</div>
 					{/if}
-					</ul>
-					<ul class="txt clearfix">
-					{if !empty($links[txt])}
-						{loop $links[txt] $link}
-						<li><a href="{$link['url']}" target=_blank title="{$link['webname']}">{$link['webname']}</a></li>
-						{/loop}
+					{if $area_arr}
+					<div class="address">区域查找：
+					<!--{loop $area_arr $val}-->
+					<a href={$val[url]}> {$val[areaname]}</a>&nbsp;
+					<!--{/loop}-->
+					</div>
 					{/if}
-					</ul>
-				</div>
-				<div class="ft"></div>
+				</ul>
+				{/if}
+			<div>
+         </div>
 			</div>
-			<!-- 友情链接结束 -->
+
+			<!-- 内容列表 -->
+			<div class="zone clearfix" id="node_bg">
+
+				{loop $top_info $article}
+				<div class="list_module bg2">
+				  <div class="hd clearfix">
+				  <span class="right_f"><b class="time">{$article[postdate]}</b>发布</span>
+				  <span class="lou">置顶</span>
+				  <span class="title"><a href="{$article[url]}" target="_blank">{$article[title]}</a></span>
+				  <span class="smallClass">{$article[catname]}</span>
+				  </div>
+				  <div class="bd clearfix">
+					<div class="pic">{if $article[thumb]}<img src="{$article[thumb]}" width=55 height=55/>{/if}</div>
+					<div class="cont">
+					  <div class="info">{$article[intro]}</div>
+					  <div class="ft">
+					  地区：<b>{$article[areaname]}</b>&nbsp;
+					  {loop $article[custom] $cus} {$cus[cusname]}：<b>{$cus[cusvalue]}</b>&nbsp;
+					  {/loop}
+					  </div>
+					</div>
+				  </div></div>
+				{/loop}
+				{loop $info $val}
+				<div class="list_module bg">
+				  <div class="hd clearfix">
+				  <span class="right_f"><b class="time">{$val[postdate]}</b>发布</span>
+				  <span class="title"><a href="{$val[url]}" target="_blank">{$val[title]}</a></span>
+				  <span class="smallClass">{$val[catname]}</span>
+				  </div>
+				  <div class="bd clearfix">
+					<div class="pic">{if $val[thumb]}<img src="{$val[thumb]}" width=55 height=55/>{/if}</div>
+					<div class="cont">
+					  <div class="info">{$val[intro]}</div>
+					  <div class="ft">
+					  地区：<b>{$val[areaname]}</b>&nbsp;
+					  {loop $val[custom] $cus} {$cus[cusname]}：<b>{$cus[cusvalue]}</b>&nbsp;
+					  {/loop}
+					  </div>
+					</div>
+				  </div></div>
+				{/loop}
+			
+				<div class="pagination_module clearfix" style="margin-top:7px;">
+				<span class="right2"><a href="#top" style="border:0; color:#36c;">返回顶部 ↑</a></span>
+				<span class="right2" style="float:left;"><!--{template page}--></span></span>	
+				
+			</div>
+			</div>
+		</div>
+		
+	</div>
 		</div>
 	</div>
 	<!-- 主体 结束 -->
-<!--{template footer}-->
+	<!--{template footer}-->
 </div>
 </body>
 </html>
