--- a/templates/phpmps/index.htm
+++ b/templates/phpmps/index.htm
@@ -7,6 +7,7 @@
 <meta name="Description" content="{$seo['description']}">
 <link href="templates/{$CFG[tplname]}/style/reset.css" type="text/css" rel="stylesheet" />
 <link href="templates/{$CFG[tplname]}/style/style.css" type="text/css" rel="stylesheet" />
+<link href="templates/{$CFG[tplname]}/style/bootstrap.min.css" type="text/css" rel="stylesheet" />
 <link href="templates/{$CFG[tplname]}/style/category.css" type="text/css" rel="stylesheet" />
 <script src="js/common.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
