--- a/templates/phpmps/login.htm
+++ b/templates/phpmps/login.htm
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html"></meta>
 <link href="templates/{$CFG[tplname]}/style/reset.css" type="text/css" rel="stylesheet" />
 <link href="templates/{$CFG[tplname]}/style/style.css" type="text/css" rel="stylesheet" />
+<link href="templates/{$CFG[tplname]}/style/bootstrap.min.css" type="text/css" rel="stylesheet" />
 <link href="templates/{$CFG[tplname]}/style/reg.css" type="text/css" rel="stylesheet" />
 <link href="templates/{$CFG[tplname]}/style/category.css" type="text/css" rel="stylesheet" />
 <script type="text/javascript" src="js/jquery.js"></script>
