--- a/templates/phpmps/header.htm
+++ b/templates/phpmps/header.htm
@@ -1,3 +1,5 @@
+
+
 	<div id="top_bar">
 		<div class="change_city">
 			{loop $areas_list $val}
@@ -49,3 +51,36 @@
 		<!-- 公告 结束 -->
 	</div>
 	<!-- 主导航结束 -->
+	
+	
+<div class="navbar navbar-inverse navbar-fixed-top" style="z-index:2;">
+<div class="container">
+<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-navbar-collapse" type="button">
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<div class="navbar-header"><a class="navbar-brand" href="#">新西兰租房网</a></div>
+</div>
+<div class="navbar-collapse collapse bs-navbar-collapse">
+
+<ul class="nav navbar-nav navbar-right" id="navbar-right-links">
+<li><a href="{$CFG[postfile]}" id="post_ad_link"><span class="glyphicon glyphicon-edit"></span>&nbsp;免费发布</a></li>
+
+<!--{if $_userid}-->
+<li class="before-login-link"><a href="member.php">欢迎你：{$_username}</a></li>
+{if $_status<=0}
+<li class="before-login-link" id="login_link"><a href="member.php?act=send_check_email">[验证邮件]</a></li>
+{/if}
+<li class="before-login-link"><a href="member.php?act=logout&mid={$_userid}">[退出]</a></li>
+<!--{else}-->
+<li class="before-login-link" id="login_link"><a href="member.php?act=login&refer={$PHP_URL}">登录</a></li>
+<li class="before-login-link" id="register_link"><a href="member.php?act=register">注册</a></li>
+<!--{/if}-->
+
+
+</ul>
+</div>
+</div>
+</div>
