refactoring register funtion

--- a/templates/phpmps/index.htm
+++ b/templates/phpmps/index.htm
@@ -23,6 +23,7 @@
 <body style="padding-top: 55px;">
 	<!--{template header}-->
 	<!--{template login}-->
+	<!--{template register}-->
 	
 	<div class="container main-shadow">
 		<div class="row search-block">
