web pages adjust

--- a/templates/phpmps/index.htm
+++ b/templates/phpmps/index.htm
@@ -42,7 +42,7 @@
 			
 				<div class="row search-tab-row">
 					<ul class="nav nav-tabs" id="searchTab">
-						<li class="active tab-ui search-tab"><a
+						<li class="active tab-ui search-tab" id="ack"><a
 							href="http://localhost/"
 							data-toggle="tab"><b>°Â¿ËÀ¼</b></a></li>
 					</ul>
@@ -58,8 +58,6 @@
 							<!--{loop $area_children $parent_id $child}-->
 							<div class="two-level-selection-pane-inactive" id="area_{$parent_id}">
 								<div class="text-selection-block">
-									<div class="text-selection-item-selected all-selection"
-										id="all-region-west">È«²¿</div>
 									<!--{loop $child $val}-->
 									<div class="text-selection-item" id="{$val[areaname]}">{$val[areaname]}</div>
 									<!--{/loop}-->
