index page adjust

--- a/templates/phpmps/index.htm
+++ b/templates/phpmps/index.htm
@@ -59,7 +59,8 @@
 							<div class="two-level-selection-pane-inactive" id="area_{$parent_id}">
 								<div class="text-selection-block">
 									<!--{loop $child $val}-->
-									<div class="text-selection-item" id="{$val[areaname]}">{$val[areaname]}</div>
+									<div class="text-selection-item-selected all-selection"	id="*">全部</div>
+									<div class="text-selection-item" id="{$val[areaid]}">{$val[areaname]}</div>
 									<!--{/loop}-->
 								</div>
 							</div>
@@ -77,9 +78,9 @@
 					</div>
 					<div
 						class="col-sm-10 col-xs-10 text-selection-block term-selection selection-block">
-						<div class="text-selection-item-selected" id="any">任意租期</div>
-						<div class="text-selection-item" id="month">长租</div>
-						<div class="text-selection-item" id="day">短租</div>
+						<div class="text-selection-item-selected" id="*">任意租期</div>
+						<div class="text-selection-item" id="m">长租</div>
+						<div class="text-selection-item" id="w">短租</div>
 					</div>
 				</div>
 				<div class="row search-condition-row">
@@ -105,12 +106,12 @@
 									onblur="if (this.value == &#39;&#39;) {this.value = &#39;9999&#39;;}"
 									onfocus="if (this.value == &#39;9999&#39;) {this.value = &#39;&#39;;}">
 							</div>
-							<div class="checkbox"
+							<!-- <div class="checkbox"
 								style="display: inline-block; vertical-align: top; margin: 5px;">
 								<label id="label-negotiable"> <input type="checkbox"
 									id="negotiable-checkbox" checked=""> 可商
 								</label>
-							</div>
+							</div> -->
 						</form>
 					</div>
 				</div>
@@ -120,8 +121,8 @@
 					</div>
 					<div
 						class="col-sm-10 col-xs-10 text-selection-block house-type-selection selection-block">
-						<div class="text-selection-item-selected" id="any">任意房型</div>
-						<div class="text-selection-item" id="share">搭房</div>
+						<div class="text-selection-item-selected" id="*">任意房型</div>
+						<div class="text-selection-item" id="share">床位</div>
 						<div class="text-selection-item" id="common">普通房</div>
 						<div class="text-selection-item" id="master">主人房</div>
 						<div class="text-selection-item" id="unit">整套</div>
@@ -164,7 +165,7 @@
 								</div>
 								<div class="col-sm-1 col-xs-2 post-info-item"
 									style="text-align: left;">
-									<span class="label label-success" style="display: inline;">房东</span>
+									<span class="label label-success" style="display: inline;">Penrose</span>
 								</div>
 								<div class="col-sm-2 col-xs-6 post-info-item"
 									style="text-align: right;">
@@ -242,5 +243,7 @@
 	</script>
 	
 	<!--{template footer}-->
+	<!--{template item_template}-->
+	
 </body>
 </html>
