--- a/templates/phpmps/post_static.htm
+++ b/templates/phpmps/post_static.htm
@@ -67,7 +67,7 @@ var mrt_magic_placeholder = "输入或者下拉，您也可以点击地图自动
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<div style="padding: 9px 10px 9px 0px;"><a href="../../"><img src="http://localhost/zufang_master/templates/phpmps/images/logo.png" style="height: 32px;" alt="新加坡租房"></a></div>
+<div style="padding: 9px 10px 9px 0px;"><a href="../../"><img src="http://localhost/zufang-master/templates/phpmps/images/logo.png" style="height: 32px;" alt="新西兰租房网"></a></div>
 </div>
 <div class="navbar-collapse collapse bs-navbar-collapse">
 <ul class="nav navbar-nav navbar-right" id="navbar-right-links">
